5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1594_1802.log
== TEST (2019-04-04 11:44:40) 
-- CODE:
from import math*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (dano)


-- ERROR:
File "XXXX", line 1
    from import math*
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 11:45:50) 
-- CODE:
from imath import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (dano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from imath import*
ModuleNotFoundError: No module named 'imath'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 11:45:58) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (dano)


-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 11:46:07) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (dano)


-- EXECUTION TIME:
0.1375
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
8.519253284679376
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
11.760410882231248
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3.283265528696387
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 11:46:56) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (int(dano))


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 11:47:05) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (int(dano))


-- EXECUTION TIME:
0.176291
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
8
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
11
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 11:47:11) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + pi * (dado2 / 3))

print (int(dano))


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:57:10) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + (pi * (dado2 / 3)))

print (int(dano))


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:58:49) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = ((sqrt(5*dado1)) + (pi * (dado2 / 3)))

print (int(dano))


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:59:29) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = ((sqrt(5*dado1)) + (pi * (dado2 / 3)))

print (dano)


-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:01:28) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + (pi * (dado2 / 3))

print (dano)


-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:13:54) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + (pi * (dado2 / 3))
vidar = vida - dano

print (vidar)


-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:14:19) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + (pi * (dado2 / 3))
vidar = vida - dano

print (vidar)


-- EXECUTION TIME:
0.146053
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191.48074671532063
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288.23958911776873
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:59) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + pi * (dado2 / 3)
vidar = vida - dano

print (vidar)


-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:15:26) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + pi * (dado2 / 3)
vidar = dano - vida

print (vidar)


-- OUTPUT:
-191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:18:08) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano - (sqrt(5 * dado1) + (pi * (dado2 / 3)))
#dano = sqrt(5 * dado1) + pi * (dado2 / 3)
vidar = vida -dano

print (vidar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano - (sqrt(5 * dado1) + (pi * (dado2 / 3)))
NameError: name 'dano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:18:43) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = (sqrt(5 * dado1) + (pi * (dado2 / 3)))
#dano = sqrt(5 * dado1) + pi * (dado2 / 3)
vidar = vida -dano

print (vidar)


-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:20:01) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = (sqrt(5 * dado1) + (pi * (dado2 / 3)))
#dano = sqrt(5 * dado1) + pi * (dado2 / 3)
vidar = vida -dano

print (int(vidar))


-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:20:18) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = (sqrt(5 * dado1) + (pi * (dado2 / 3)))
#dano = sqrt(5 * dado1) + pi * (dado2 / 3)
vidar = vida -dano

print (int(vidar))


-- EXECUTION TIME:
0.134179
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:42:48) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))

restante = vida -dano

print (restante)


-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:43:03) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))

restante = vida -dano

print (restante)


-- EXECUTION TIME:
0.145838
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:43:26) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))

restante = int(vida -dano)

print (restante)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:43:38) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))

restante = int(vida -dano)

print (restante)


-- EXECUTION TIME:
0.203151
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:44:25) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:44:38) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- EXECUTION TIME:
0.13701
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:44:56) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + (pi * (dado2 / 3))
restante = vida -dano

print (restante)


-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:45:18) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = sqrt(5 * dado1) + (pi * (dado2 / 3))
restante = vida -dano

print (int(restante))


-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:45:52) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:46:05) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- EXECUTION TIME:
0.144186
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:47:02) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- EXECUTION TIME:
0.145792
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:48:09) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:48:35) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- EXECUTION TIME:
0.154617
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:48:47) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = float(vida -dano)

print (restante)


-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:49:05) 
-- CODE:
from math import*

vida = int(input("Vida Inicial: "))
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = float(vida -dano)

print (restante)


-- EXECUTION TIME:
0.20904
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:49:28) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:49:43) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = int(sqrt(5 * dado1) + (pi * (dado2 / 3)))
restante = int(vida -dano)

print (restante)


-- EXECUTION TIME:
0.157352
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:52:28) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = float(sqrt(5 * dado1) + (pi * (dado2 / 3)))
#restante = int(vida -dano)

print (int(vida - dano))


-- EXECUTION TIME:
0.221961
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:52:36) 
-- CODE:
from math import*

vida = float(input("Vida Inicial: "))
dado1 = float(input("Dado 1: "))
dado2 = float(input("Dado 2: "))

dano = float(sqrt(5 * dado1) + (pi * (dado2 / 3)))
#restante = int(vida -dano)

print (int(vida - dano))


-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
